@@ -47,6 +47,9 @@ pmacct is Copyright (C) 2003-2009 by Paolo Lucente
     included in the count of flows sent in NetFlow v9 datagrams.
     While this was not generating any issues with parsing flows,
     it was originating visualization issues in Wireshark.
+  ! fix, SQL plugins: CPU hitting 100% has been determined when
+    sql_history is disabled but sql_history_roundoff is defined.
+    Thanks very much to Charlie Allom for reporting the issue.
 
 0.12.0rc2 -- 09-09-2009
   + BGP daemon thread has been tied up with both the NetFlow and
